# OMNIABASE

./: .gitignore  .zenodo.json  APPLIED-CASE-001-NO-BASE-IS-SOVEREIGN.md  ARCHITECTURE.md  BRANCHES.md  CITATION.cff  CONTRIBUTING_PRINCIPLES.md  FOUNDATIONS.md  INFINITY-FIRST-OMNIABASE.md  LEXICON.md  OMNIABASE_MRT_v0.md  OMNIABASE_MRT_v0_CASE_01.md  PHILOSOPHY.md  PROOF_PATH.md  README.md  REPOSITORY_MAP.md  ROADMAP.md  TOTALITY-FIELD.md  ecosystem_manifest.json  pyproject.toml
.github/workflows/: ci.yml
archive/readme-history/: README.before-clickable-links-fix-20260520T140205Z.md  README.before-clickable-links-repair-20260520T140717Z.md  (+2 more)
docs/: BACKBONE_CI_REPAIR_REPORT.md  BACKBONE_COMPLIANCE.md  BASE_INVARIANCE.md  BASE_INVARIANCE_CLAIM_BOUNDARY.md  BOUNDARY.md  CI_FINAL_COLLECTION_FIX_REPORT.md  DOI_REGISTRY.md  ECOSYSTEM_ROLE.md  FIRST_PROOF.md  FIRST_PUBLIC_DEMONSTRATION.md  FORMALISM.md  OBSERVATION_CONTRACT.md  OMNIABASE_CANONICAL_DEMONSTRATION_v1.md  OMNIABASE_MANIFEST.json  OMNIABASE_PUBLIC_DEMONSTRATION.md  OMNIABASE_PUBLIC_POSITION.md  OMNIABASE_SCOPE.md  ONLINE_CI_REPAIR_REPORT.md  PRODUCTION_READINESS.md  QUICKSTART_OMNIABASE.md  REPOSITORY_STATUS.md  REPRESENTATION_OVERVIEW.md  SECOND_PASS_ONLINE_CI_REPAIR_REPORT.md  STRUCTURAL_OBSERVABILITY_ROLE.md
examples/: minimal_structural_reliability_demo_v0.md  omniacore.py  omnibase_minimal_observation.json  sample_numbers.csv
omniabase/: __init__.py  backbone_adapter.py
omniabase_auditor/: cli.py  core.py
tests/: test_backbone_adapter.py  test_omniabase_auditor.py  test_repository_smoke.py
